Fixed a wrong name.

--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>andaraih</title>
 </head>
 <body>
-
+    <h1>Andaraih</h1>
 </body>
 </html>
