--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +6,11 @@
     <title>andaraih</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="../../static/safedirections/js/render_map.js"></script>
-    <script src="../../static/safedirections/js/geolocating.js"></script>
-    <script src="../../static/safedirections/js/directions_routing.js"></script>
-    <script src="../../static/safedirections/js/waypts_setter.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../static/safedirections/css/style.css">
+    <script src="{% static 'safedirections/js/render_map.js' %}"></script>
+    <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
+    <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
+    <script src="{% static 'safedirections/js/waypts_setter.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'safedirections/css/style.css' %}">
 </head>
 <body>
     <h1>Calculate your route</h1>
