--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -6,6 +6,7 @@
     <title>andaraih</title>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="{% static 'safedirections/js/jquery-1.11.3.min.js' %}"></script>
+    <script src="{% static 'safedirections/js/CRUD.js' %}"></script>
     <script src="{% static 'safedirections/js/render_map.js' %}"></script>
     <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
     <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
