--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -6,12 +6,14 @@
     <title>andaraih</title>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="{% static 'safedirections/js/jquery-1.11.3.min.js' %}"></script>
+    <script src="{% static 'safedirections/bootstrap-3.3.6-dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'safedirections/js/CRUD.js' %}"></script>
     <script src="{% static 'safedirections/js/render_map.js' %}"></script>
     <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
     <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
     <script src="{% static 'safedirections/js/waypts_setter.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'safedirections/css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'safedirections/bootstrap-3.3.6-dist/css/bootstrap.min.css' %}">
 </head>
 <body>
     <h1>Calculate your route</h1>
@@ -32,5 +34,31 @@
     <div id="map"></div>
     <p id="error"></p>
     <div id="map"></div>
+
+    <div class="modal fade" id="dangerModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                   <button type="button" class="close" data-dismiss="modal">&times;</button>
+                   <h4 class="modal-title">Danger Level</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label>Level</label>
+                        <select id="dangerLevel" class="form-control">
+                            <option value="0">Safe</option>
+                            <option value="1">Warning</option>
+                            <option value="2">Dangerous</option>
+                            <option value="3">Very Dangerous</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                   <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                   <button type="button" onclick="bookmarker()" class="btn btn-default" data-dismiss="modal">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
