ta funcionando, pouha

--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -363,7 +363,6 @@
             </div>
         </div>
     </footer>
-
     <script src="https://maps.googleapis.com/maps/api/js"></script>
 
     <!-- jQuery -->
@@ -384,5 +383,6 @@
     <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
     <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
     <script src="{% static 'safedirections/js/waypts_setter.js' %}"></script>
+    <script src="{% static 'safedirections/js/main_script.js' %}"></script>
 </body>
 </html>
