* bootstrapping and customizing the site

--- a/safedirections/static/safedirections/css/style.css
+++ b/safedirections/static/safedirections/css/style.css
@@ -1,6 +1,18 @@
 #map {
-	margin: 0;
+	margin: 1vh;
     padding: 0;
 	width: 100%;
     height: 500px;
+}
+
+.text-white {
+    color: white;
+}
+
+.form-group {
+    margin-right: 10px;
+}
+
+.get-position-link {
+    font-size: 0.8em;
 }
