# nothing at all

--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -320,7 +320,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Andara&iacute;H 2015</span>
+                    <span class="copyright">Copyright &copy; AndaraiH 2015</span>
                 </div>
                 <div class="col-md-4">
                 </div>
@@ -352,11 +352,11 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'safedirections/js/agency.js' %}"></script>
-    <script src="{% static 'safedirections/js/CRUD.js' %}"></script>
     <script src="{% static 'safedirections/js/render_map.js' %}"></script>
     <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
     <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
     <script src="{% static 'safedirections/js/waypts_setter.js' %}"></script>
     <script src="{% static 'safedirections/js/main_script.js' %}"></script>
+    <script src="{% static 'safedirections/js/CRUD.js' %}"></script>
 </body>
 </html>
