--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -52,7 +52,7 @@
                         <a class="page-scroll" href="#portfolio">Navegue</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Sobre</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Quem somos</a>
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">Sobre</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -158,8 +158,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>11/12/2015 - 19:00</h4>
+                                    <h4 class="subheading">Come&ccedil;amos a batalha com um combatente ao ch&atilde;o... ch&atilde;o, ch&atilde;o, CH&Atilde;O!</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -172,11 +172,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>11/12/2015 - 20:20</h4>
+                                    <h4 class="subheading">Esta&ccedil;&atilde;o de <strike>integra&ccedil;&atilde;o cm o metr&ocirc; linha 2</strike> desenvolvimento</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Kinfolk ennui small batch, before they sold out fixie pinterest sustainable four loko. Keytar irony quinoa ugh. Everyday carry authentic hoodie seitan, bitters blue bottle umami readymade cold-pressed pabst freegan tofu PBR&B chartreuse vegan.</p>
                                 </div>
                             </div>
                         </li>
@@ -186,11 +186,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>12/11/2015 - 01:00</h4>
+                                    <h4 class="subheading">Caf&eacute;, por favor. Metido, n&atilde;o batido.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Bulbasaur Ivysaur Venusaur Charmander Charmeleon Charizard Squirtle Wartortle Blastoise Caterpie Metapod Butterfree Weedle Kakuna Beedrill Pidgey Pidgeotto Pidgeot Rattata Raticate</p>
                                 </div>
                             </div>
                         </li>
@@ -200,11 +200,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>12/11/2015 - 04:00</h4>
+                                    <h4 class="subheading">"Time is money! Ooohh yeah!" - SAM, Super.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.</p>
                                 </div>
                             </div>
                         </li>
@@ -235,7 +235,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="{% static 'safedirections/img/team/1.jpg' %}" class="img-responsive img-circle" alt="">
-                        <h4>Aluizio dos Santos de Lima Filh</h4>
+                        <h4>Aluizio dos Santos de Lima Filho</h4>
                         <p class="text-muted">Django Boy</p>
                     </div>
                 </div>
@@ -302,10 +302,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="#">Utilize a API</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
+                        <li><a href="#">Termos de Uso</a></li>
                     </ul>
                 </div>
             </div>
