* Changing multiple selector list for dropdown list

--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -138,9 +138,7 @@
                     </div>
                     <div class="col-md-3 text-left aditional-padding">
                         <h4 class="text-white text-center">Select a route</h4>
-                        <i class="text-white">(Ctrl-Click for multiple selection)</i>
-                        <br>
-                        <select class="right-panel" id="waypoints" onchange="route_selector(this.value)">
+                        <select class="form-control right-panel" id="waypoints" onchange="route_selector(this.value)">
                             <!-- JQuery will fill it with the resulting routes -->
                         </select>
                     </div>
