* Plenty of things...

--- a/safedirections/static/safedirections/css/agency.css
+++ b/safedirections/static/safedirections/css/agency.css
@@ -571,6 +571,10 @@ footer ul.quicklinks {
   text-transform: uppercase;
   text-transform: none;
 }
+ul.social-buttons {
+  margin-bottom: 0;
+}
+
 .btn:focus,
 .btn:active,
 .btn.active,
