* routes are being correctly colored

--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -372,6 +372,7 @@
     <script src="{% static 'safedirections/js/render_map.js' %}"></script>
     <script src="{% static 'safedirections/js/calculate_weight.js' %}"></script>
     <script src="{% static 'safedirections/js/geolocating.js' %}"></script>
+    <script src="{% static 'safedirections/js/rainbowvis.js' %}"></script>
     <script src="{% static 'safedirections/js/directions_routing.js' %}"></script>
     <script src="{% static 'safedirections/js/route_selector.js' %}"></script>
     <script src="{% static 'safedirections/js/waypts_setter.js' %}"></script>
