--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -98,7 +98,7 @@
                 <div class="col-md-4">
                     <span class="glyphicon glyphicon-stats"></span>
                     <h4 class="service-heading">Consulte</h4>
-                    <p class="text-muted">Saiba o qu&atilde;o perigoso um local estar.</p>
+                    <p class="text-muted">Saiba o qu&atilde;o perigoso um local est&aacute;.</p>
                 </div>
             </div>
         </div>
