--- a/safedirections/templates/safedirections/index.html
+++ b/safedirections/templates/safedirections/index.html
@@ -141,7 +141,7 @@
                         <select class="form-control right-panel" id="waypoints" onchange="route_selector(this.value)">
                             <!-- JQuery will fill it with the resulting routes -->
                         </select>
-                        
+                        <p class="text-white text-left">As rotas podem ter diferentes tons dentro de um gradiente entre verde vermelho. Quanto mais verde mais segura &eacute; a sua rota, por&eacute;m quanto mais vermelha, maior &eacute; o n&iacute;vel de periculosidade.</p>
                     </div>
                     <div class="col-md-12">
                         <p id="error"></p>
